--- a/Front/Angular_Front v2/src/index.html
+++ b/Front/Angular_Front v2/src/index.html
@@ -5,9 +5,9 @@
   <base href="/">
   <meta charset="utf-8">
 
-  <title>Compilator 3000</title>
+  <title>OCE</title>
   <!-- Favicon -->
-  <link href="./assets/img/brand/favicon0.png" rel="icon" type="image/png">
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
